--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^7.0.10",
+    "nodemon": "^3.0.3",
+    "twilio": "^5.10.4"
   }
 }
