--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "backend",
+  "name": "pronext-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "ProNext Platform - Complete Backend API with Sessions, Users, Meetings, Announcements, Files & Analytics",
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
     "start": "node app.js",
-    "build": "mkdir -p build && cp -R * build/"
+    "dev": "nodemon app.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "build": "mkdir -p build && cp -R * build/",
+    "lint": "eslint .",
+    "debug": "node --inspect app.js",
+    "debug-brk": "node --inspect-brk app.js"
   },
+  "keywords": [
+    "express",
+    "api",
+    "mongodb",
+    "zoom",
+    "authentication",
+    "sessions",
+    "meetings",
+    "announcements"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,12 +30,39 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.0.3",
-    "twilio": "^5.10.4"
+    "twilio": "^5.10.4",
+    "axios": "^1.6.0",
+    "socket.io": "^4.7.2",
+    "pdfkit": "^0.13.0",
+    "csv-stringify": "^6.4.0",
+    "moment": "^2.29.4",
+    "joi": "^17.11.0",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "8.2.1",
+    "cloudinary": "^1.40.0",
+    "stripe": "^13.10.0",
+    "razorpay": "^2.9.1",
+    "node-cache": "^5.1.2",
+    "uuid": "^9.0.1",
+    "lodash": "^4.17.21",
+    "xml2js": "^0.6.2",
+    "email-validator": "^2.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
