--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.0.3",
     "pdfkit": "^0.13.0",
