--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.40.0",
